samples/_failures_safe/1761372218_64182b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b54a36c.c: In function ‘main’:
./samples/SAFE/__tmp_9b54a36c.c:160:9: error: expected declaration or statement at end of input
  160 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_9b54a36c.c:160:9: error: expected declaration or statement at end of input
